tests/ui/rfcs/rfc-2396-target_feature-11/trait-impl.stderr
error: `#[target_feature(..)]` cannot be applied to safe trait method
  --> $DIR/trait-impl.rs:11:5
   |
LL |     #[target_feature(enable = "sse2")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot be applied to safe trait method
LL |
LL |     fn foo(&self) {}
   |     ------------- not an `unsafe` function

error[E0053]: method `foo` has an incompatible type for trait
  --> $DIR/trait-impl.rs:13:5
   |
LL |     fn foo(&self) {}
   |     ^^^^^^^^^^^^^ expected safe fn, found unsafe fn
   |
note: type in trait
  --> $DIR/trait-impl.rs:4:5
   |
LL |     fn foo(&self);
   |     ^^^^^^^^^^^^^^
   = note: expected signature `fn(&Bar)`
              found signature `#[target_features] fn(&Bar)`

error: `#[target_feature(..)]` cannot be applied to safe trait method
  --> $DIR/trait-impl.rs:21:5
   |
LL |     #[target_feature(enable = "sse2")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot be applied to safe trait method
LL |
LL |     fn foo(&self) {}
   |     ------------- not an `unsafe` function

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0053`.
